--- a/local.yml
+++ b/local.yml
@@ -15,22 +15,17 @@
         display_name: "{{ policy_name }}"
         domain_id: "{{ domain_id | default('default') }}"
         category: "{{ category_name | default('Application') }}"
-        scope: ["{{ policy_scope }}"]
+        scope: ["{{ policy_scope | default(omit) }}"]
         rules:
           - action: "ALLOW"
-            display_name: "{{ rule_name }}"
-            source_groups: ["{{ source_group }}"]
-            destination_groups: ["{{ destination_group }}"]
+            display_name: "{{ rule_name | default(omit) }}"
+            source_groups: ["{{ source_group | default(omit) }}"]
+            destination_groups: ["{{ destination_group | default(omit) }}"]
             services: ["ANY"]
-            scope: ["{{ rule_scope }}"]
+            scope: ["{{ rule_scope | default(omit) }}"]
       when:
         - nsx_server is defined
         - nsx_username is defined
         - nsx_password is defined
         - validate_certs is defined
         - policy_name is defined
-        - policy_scope is defined
-        - rule_name is defined
-        - source_group is defined
-        - destination_group is defined
-        - rule_scope is defined
